// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressOverviewTile component should render correctly 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="Address Book"
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        margin={null}
        numberOfLines={null}
        text="Default Shiping Address"
        textDecoration={null}
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        dataLocator="addressbook-overview-edit"
        fontSizeVariation="large"
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        text="Add"
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="You have not added an address yet."
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        margin={null}
        numberOfLines={null}
        text="Default Billing Address"
        textDecoration={null}
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        data-locator="addressbook-makedefault"
        fontSizeVariation="large"
        lineHeight="10"
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        text="Add"
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="You have not added an address yet."
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="fixed-width"
      color=""
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      paddings="12px 32px 12px 32px"
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="View Address Book"
      theme={Object {}}
      url=""
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`AddressOverviewTile render empty address component should render correctly 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_addressBookHeading"
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        margin={null}
        numberOfLines={null}
        text="lbl_overview_defaultShipingAddress"
        textDecoration={null}
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        dataLocator="addressbook-overview-edit"
        fontSizeVariation="large"
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        text="lbl_overview_addressBookAdd"
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_addressNotAdded"
    textDecoration={null}
  />
  <Styled(View) />
  <Styled(View)>
    <View
      style={
        Object {
          "flex": 1.5,
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Styled(BodyCopy)
        accessibilityText=""
        color="black"
        dataLocator=""
        fontFamily="secondary"
        fontSize="fs14"
        margin={null}
        numberOfLines={null}
        text="lbl_overview_defaultBillingAddress"
        textDecoration={null}
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 0.5,
          "flexDirection": "row",
          "justifyContent": "flex-end",
        }
      }
    >
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        color="gray.900"
        colorName={null}
        customStyle={Object {}}
        data-locator="addressbook-makedefault"
        fontSizeVariation="large"
        lineHeight="10"
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        text="lbl_overview_addressBookAdd"
        underline={true}
        visible={false}
      />
    </View>
  </Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    dataLocator=""
    fontFamily="primary"
    fontSize="fs13"
    fontWeight="regular"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_addressNotAdded"
    textDecoration={null}
  />
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="fixed-width"
      color=""
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      paddings="12px 32px 12px 32px"
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_overview_addressBookCTA"
      theme={Object {}}
      url=""
    />
  </Styled(View)>
</Styled(View)>
`;
